@@ -20,3 +20,5 @@ Max Money Increased - https://www.pokecommunity.com/showpost.php?p=9986063&postc
 Running allowed everywhere - https://www.pokecommunity.com/showpost.php?p=9990848&postcount=13
 
 Removed badge boosts - https://www.pokecommunity.com/showpost.php?p=10009445&postcount=18
+
+Trainer classes each use their own pokeball - https://www.pokecommunity.com/showpost.php?p=10038105&postcount=22
